# bigcontest2025

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.mcp  README.md  app.py  docker-compose.yml  pyproject.toml  test.txt
.github/workflows/: deploy.yml
mcp_server/: README.md  __init__.py  data_ingestion.py  embeddings.py  main.py  requirements.txt  vector_store.py
mcp_server/scripts/: __init__.py  ingest_jsonl.py
scripts/: ingest_data.py  run_mcp_server.sh
src/: __init__.py  config.py  prompts.py  session.py  ui.py
src/clients/: __init__.py  base.py  gemini.py  rag_client.py
